# bugsnag-client

./: Cargo.toml
examples/: log_integration.rs  panic_handler_global_instance.rs  simple_panic_handler.rs
src/: bugsnag_impl.rs
